Clearing up the print method of the generic and non-generic linked lists.